fix: refresh pages and contact spacing

--- a/src/Contact.module.css
+++ b/src/Contact.module.css
@@ -8,7 +8,7 @@
 	flex-grow: 1;
 	align-items: center;
 	padding: 0 10vw;
-	margin: 10rem 0;
+	margin: 4rem 0;
 	font-size: 1.5rem;;
 }
 
